# iam_actions

./: .gitignore  Dockerfile  README.md  pyproject.toml  s3.py
.github/deploy/: release.yml
.github/workflows/: ci.yml  release.yml
iam_actions/: __init__.py  action_map.py  generate.py  services.py
